feat: Add Ways folder

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,13 @@
 ---
 import Link from "./Link.astro";
+import LocalLink from "./LocalLink.astro";
 ---
 
 <footer>
 	<ul class="links">
 		<li><Link href="https://git.average.name/AverageHelper/portfolio">source</Link></li>
 		<li><Link href="/humans.txt">humans.txt</Link></li>
-		<li>:3</li>
+		<li><LocalLink fileName="ways">Ways</LocalLink></li>
 	</ul>
 
 	<ul id="contact">
