--- a/src/pages/ways/[...slug].astro
+++ b/src/pages/ways/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import type { CollectionEntry, CollectionKey } from "astro:content";
 import { getCollection } from "astro:content";
+import Link from "@/components/Link.astro";
 import LocalLink from "@/components/LocalLink.astro";
 import WaysLayout from "@/layouts/WaysLayout.astro";
 
@@ -44,7 +45,26 @@ const { Content } = await entry.render();
 	<Content />
 
 	<footer slot="footer">
-		<p>&copy; <LocalLink>Average Helper</LocalLink>, except where otherwise noted.</p>
+		<p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/">
+			<!-- prettier-ignore -->
+			<LocalLink property="dct:title" rel="cc:attributionURL" fileName="ways">Ways</LocalLink>
+			by <!-- prettier-ignore -->
+			<LocalLink
+				rel="cc:attributionURL dct:creator"
+				property="cc:attributionName">Average Helper</LocalLink>
+			is marked with <!-- prettier-ignore -->
+			<Link
+				href="http://creativecommons.org/publicdomain/zero/1.0"
+				relLicense
+				style="display:inline-block;"
+			>CC0 1.0<img class="cc" src="/images/cc.svg" alt="" /><img
+					class="cc"
+					src="/images/zero.svg"
+					alt=""
+				/>
+			</Link>
+		</p>
+
 		<p>
 			<LocalLink fileName="ways">
 				<strong>Return to Ways</strong>
