--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -114,6 +114,12 @@ code {
 	color: var(--label-code);
 }
 
+img.cc {
+	height: 22px !important;
+	margin-left: 3px;
+	vertical-align: text-bottom;
+}
+
 .emoji {
 	/* Copied from styles at https://unicode.org/emoji/charts/full-emoji-list.html#2764 */
 	font-family: "Noto Color Emoji", "Apple Color Emoji", "Segoe UI Emoji", Times, Symbola, Aegyptus,
