chore: Add another Ways entry

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/variables.css";
 import "../styles/colors.css";
+import "../styles/code.css";
 import "../styles/typography.css";
 import "../styles/style.css";
 import Footer from "@/components/Footer.astro";
