--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,6 +35,7 @@ const { contentClass = "content" } = Astro.props;
 		<meta property="og:description" content="Helpful open-source software." />
 		<meta property="description" content="Helpful open-source software." />
 		<meta name="twitter:card" content="summary" />
+		<meta name="generator" content={Astro.generator} />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 	<body>
