--- a/src/pages/ways/index.astro
+++ b/src/pages/ways/index.astro
@@ -1,9 +1,14 @@
 ---
+import { getCollection } from "astro:content";
+import { Temporal } from "temporal-polyfill";
 import WaysLayout from "@/layouts/WaysLayout.astro";
 import LocalLink from "@/components/LocalLink.astro";
-import { getCollection } from "astro:content";
 
 const waysEntries = await getCollection("ways");
+
+function toDate(str: string): Temporal.PlainDate {
+	return Temporal.PlainDate.from(str);
+}
 ---
 
 <WaysLayout>
@@ -14,7 +19,7 @@ const waysEntries = await getCollection("ways");
 				// eslint-disable-next-line @typescript-eslint/no-unsafe-return
 				<li>
 					<LocalLink fileName={`ways/${w.slug}`}>{w.data.title}</LocalLink>,
-					{w.data.date.toLocaleDateString(undefined, { dateStyle: "medium" })}
+					{toDate(w.data.date).toLocaleString("en-US", { dateStyle: "medium" })}
 				</li>
 			))
 		}
