--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,7 +5,7 @@
 	--color-scheme: "dark";
 	scrollbar-color: light;
 
-	--background: #181818;
+	--background: #121212;
 	--background-code: #1e1e1e;
 	--background-code-highlight-nested: #f7ebc6;
 	--background-code-selection: #264f78;
@@ -46,7 +46,7 @@
 	--input-background: rgba(0, 0, 0, 0.2);
 	--inverse-label: #333;
 	--search-field: #2b2b2c;
-	--link: #00abdf;
+	--link: #00b7ee;
 
 	--separator: #3a3a3c;
 	--medium-separator: #3a3a3c;
@@ -140,7 +140,7 @@
 		--input-background: #eeeeee;
 		--inverse-label: #f8f8f8;
 		--search-field: #fff;
-		--link: #00a3d5;
+		--link: #0078b9;
 
 		--separator: #ccc;
 		--medium-separator: #dfdfdf;
