feat: Add Rainbow Railroad

--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -11,6 +11,10 @@ import Link from "@/components/Link.astro";
 		of resources that I've found useful. Nothing here is absolute, and you should do your own due
 		dilligence for your own safety. This page is only a guide.</p
 	>
+	<p
+		>If you need help, visit <!-- prettier-ignore -->
+		<Link href="https://www.rainbowrailroad.org/">Rainbow Railroad</Link>.</p
+	>
 
 	<h2 id="internet-tools">Internet Tools</h2>
 	<p
