--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -41,6 +41,7 @@ const {
 		<title>{title}</title>
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
 		<link rel="author" href="humans.txt" />
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link
 			rel="alternate"
 			href="/ways/feed.xml"
