--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import Logo from "./Logo.astro";
 	<ul class="links">
 		<li><Link href="https://git.average.name/AverageHelper/portfolio">source</Link></li>
 		<li><Link href="/humans.txt">humans.txt</Link></li>
-		<li><LocalLink fileName="ways">Ways</LocalLink></li>
+		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
 	</ul>
 
 	<ul id="contact">
