fix: Don't `target=_blank` the humans.txt link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import Logo from "./Logo.astro";
 <footer>
 	<ul class="links">
 		<li><Link href="https://git.average.name/AverageHelper/portfolio">source</Link></li>
-		<li><Link href="/humans.txt">humans.txt</Link></li>
+		<li><LocalLink fileName="humans.txt">humans.txt</LocalLink></li>
 		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
 	</ul>
 
