--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,7 @@ const {
 		<meta name="robots" content="noai" />
 		<title>{title}</title>
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
-		<link rel="author" href="humans.txt" />
+		<link rel="author" href="/humans.txt" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link
 			rel="alternate"
