--- a/src/pages/sitemap.astro
+++ b/src/pages/sitemap.astro
@@ -24,6 +24,8 @@ const waysEntries = await getCollection("ways");
 
 const markdownEntries = await Astro.glob("/src/pages/*.md");
 
+const txtEntries = ["humans.txt"];
+
 const pages = Object.values(await Astro.glob("/src/pages/**/*.astro"))
 	.concat(Object.values(markdownEntries))
 	.map(res => res.url)
@@ -39,6 +41,7 @@ const pages = Object.values(await Astro.glob("/src/pages/**/*.astro"))
 	.filter(url => {
 		return url !== "404";
 	})
+	.concat(txtEntries)
 	.sort();
 
 function sortedByDate(coll: Readonly<typeof waysEntries>): typeof waysEntries {
