--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -179,9 +179,16 @@ code:not([class*="language-"]) {
 	padding: 2px 4px;
 	border-radius: 4px;
 	font-family: var(--code-font-family);
-	font-size: 13px;
 	background-color: var(--background-code);
 	color: var(--label-code);
+}
+
+p code:not([class*="language-"]) {
+	font-size: 14px;
+}
+
+a code:not([class*="language-"]) {
+	color: var(--link);
 }
 
 pre[class*="language-"] {
