--- a/src/components/HintLink.astro
+++ b/src/components/HintLink.astro
@@ -8,4 +8,6 @@ interface Props extends Omit<HTMLAttributes<"a">, "target" | "rel" | "class"> {
 const { href, ...attrs } = Astro.props;
 ---
 
-<a href={href} target="_blank" rel="noopener noreferrer" class="hint" {...attrs}><slot /></a>
+<a href={href} target="_blank" rel="external noopener noreferrer" class="hint" {...attrs}
+	><slot /></a
+>
