--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -16,17 +16,9 @@ interface Props extends Omit<HTMLAttributes<"a">, "target" | "rel"> {
 	 * @default false
 	 */
 	relLicense?: boolean;
-
-	/**
-	 * Whether the link's target should be this tab or open a new one.
-	 * @default false
-	 */
-	sameTab?: boolean;
 }
 
-const { href, relMe = false, relLicense = false, sameTab = false, ...attrs } = Astro.props;
-
-const target = sameTab ? undefined : "_blank";
+const { href, relMe = false, relLicense = false, ...attrs } = Astro.props;
 
 const rel = ["external", "noopener", "noreferrer", relMe ? "me" : "", relLicense ? "license" : ""]
 	.filter(a => a)
@@ -39,4 +31,4 @@ if (URL.canParse(href)) {
 }
 ---
 
-<a href={href} target={target} rel={rel} {...attrs}><slot /></a>
+<a href={href} rel={rel} {...attrs}><slot /></a>
