--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,13 +3,13 @@ import Link from "@/components/Link.astro";
 import LocalLink from "@/components/LocalLink.astro";
 ---
 
-<header>
-	<nav>
-		<ul>
+<nav>
+	<ul>
+		<slot>
 			<li><LocalLink>About</LocalLink></li>
 			<li><LocalLink fileName="links">Links</LocalLink></li>
 			<li><Link href="https://git.average.name/AverageHelper">Code</Link></li>
 			<li><LocalLink fileName="support">Support</LocalLink></li>
-		</ul>
-	</nav>
-</header>
+		</slot>
+	</ul>
+</nav>
