--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,45 +1,56 @@
 ---
-import Link from "./Link.astro";
+import ExternalLink from "./ExternalLink.astro";
 import LocalLink from "./LocalLink.astro";
 import Logo from "./Logo.astro";
 ---
 
 <footer>
 	<ul class="links">
-		<li><Link href="https://git.average.name/AverageHelper/portfolio">source</Link></li>
+		<li>
+			<!-- prettier-ignore -->
+			<ExternalLink href="https://git.average.name/AverageHelper/portfolio">source</ExternalLink>
+		</li>
 		<li><LocalLink fileName="humans.txt">humans.txt</LocalLink></li>
 		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
 	</ul>
 
 	<ul id="contact">
 		<li>
-			<Link
+			<ExternalLink
 				relMe
 				href="https://git.average.name/AverageHelper"
 				data-tooltip="git.average.name/AverageHelper"
 			>
 				<Logo key="forgejo" />
-			</Link>
+			</ExternalLink>
 		</li>
 		<li>
-			<Link
+			<ExternalLink
 				relMe
 				href="https://codeberg.org/AverageHelper"
 				data-tooltip="codeberg.org/AverageHelper"
 			>
 				<Logo key="codeberg" />
-			</Link>
+			</ExternalLink>
 		</li>
 		<li>
-			<Link relMe href="https://github.com/AverageHelper" data-tooltip="github.com/AverageHelper">
+			<ExternalLink
+				relMe
+				href="https://github.com/AverageHelper"
+				data-tooltip="github.com/AverageHelper"
+			>
 				<Logo key="github" />
-			</Link>
+			</ExternalLink>
 		</li>
 		<li>
 			<!-- Eventually I want @avg@average.name... -->
-			<Link relMe href="https://fosstodon.org/@avghelper" data-tooltip="fosstodon.org/@avghelper">
+			<ExternalLink
+				relMe
+				href="https://fosstodon.org/@avghelper"
+				data-tooltip="fosstodon.org/@avghelper"
+			>
 				<Logo key="fedi" />
-			</Link>
+			</ExternalLink>
 		</li>
 	</ul>
 </footer>
