--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import Link from "@/components/Link.astro";
+import ExternalLink from "@/components/ExternalLink.astro";
 import LocalLink from "@/components/LocalLink.astro";
 ---
 
@@ -8,7 +8,7 @@ import LocalLink from "@/components/LocalLink.astro";
 		<slot>
 			<li><LocalLink>About</LocalLink></li>
 			<li><LocalLink fileName="links">Links</LocalLink></li>
-			<li><Link href="https://git.average.name/AverageHelper">Code</Link></li>
+			<li><ExternalLink href="https://git.average.name/AverageHelper">Code</ExternalLink></li>
 			<li><LocalLink fileName="support">Support</LocalLink></li>
 		</slot>
 	</ul>
