chore: Use shorter Fedi tooltip

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,12 +43,8 @@ import Logo from "./Logo.astro";
 			</ExternalLink>
 		</li>
 		<li>
-			<!-- Eventually I want @avg@average.name... -->
-			<ExternalLink
-				relMe
-				href="https://fosstodon.org/@avghelper"
-				data-tooltip="fosstodon.org/@avghelper"
-			>
+			<!-- TODO: Eventually I want @avg@average.name, but idk if Mastodon will verify redirects -->
+			<ExternalLink relMe href="https://fosstodon.org/@avghelper" data-tooltip="avg.name/@avg">
 				<Logo key="fedi" />
 			</ExternalLink>
 		</li>
